// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List calls setSelectedLists with empty array when deselecting list 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="list-item-row row"
    >
      <div
        class="mx-sm-auto col-1"
      >
        <input
          class="multi-select-check"
          type="checkbox"
        />
        <div
          class="list-item-multi-divider"
        />
      </div>
      <div
        class="col-sm-11 col-10"
      >
        <div
          class="ms-1 pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <h5
              class="mb-1"
            >
              <svg
                aria-hidden="true"
                class="text-secondary me-3"
                fill="currentColor"
                focusable="false"
                height="20"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM96 192c0-17.7 14.3-32 32-32s32 14.3 32 32c0 53 43 96 96 96s96-43 96-96c0-17.7 14.3-32 32-32s32 14.3 32 32c0 70.7-57.3 128-128 128s-128-57.3-128-128z"
                />
              </svg>
              foo
            </h5>
          </div>
          <div
            class="list-multi-created-at col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class="list-multi-buttons pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List calls setSelectedLists with list when selecting list 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="list-item-row row"
    >
      <div
        class="mx-sm-auto col-1"
      >
        <input
          class="multi-select-check"
          type="checkbox"
        />
        <div
          class="list-item-multi-divider"
        />
      </div>
      <div
        class="col-sm-11 col-10"
      >
        <div
          class="ms-1 pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <h5
              class="mb-1"
            >
              <svg
                aria-hidden="true"
                class="text-secondary me-3"
                fill="currentColor"
                focusable="false"
                height="20"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM96 192c0-17.7 14.3-32 32-32s32 14.3 32 32c0 53 43 96 96 96s96-43 96-96c0-17.7 14.3-32 32-32s32 14.3 32 32c0 70.7-57.3 128-128 128s-128-57.3-128-128z"
                />
              </svg>
              foo
            </h5>
          </div>
          <div
            class="list-multi-created-at col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class="list-multi-buttons pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List does not render Link when includeLinkToList is false 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-12"
      >
        <div
          class=" pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <h5
              class="mb-1"
            >
              <svg
                aria-hidden="true"
                class="text-secondary me-3"
                fill="currentColor"
                focusable="false"
                height="20"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM96 192c0-17.7 14.3-32 32-32s32 14.3 32 32c0 53 43 96 96 96s96-43 96-96c0-17.7 14.3-32 32-32s32 14.3 32 32c0 70.7-57.3 128-128 128s-128-57.3-128-128z"
                />
              </svg>
              foo
            </h5>
          </div>
          <div
            class="col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class=" pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List does render Link when includeLinkToList is true 1`] = `
<div>
  <div
    class="foo list-list-group-item list-group-item"
    data-test-class="foo"
    data-test-id="list-id1"
  >
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-12"
      >
        <div
          class=" pt-1 row"
        >
          <div
            class="col-lg-6"
          >
            <a
              class="router-link"
              data-discover="true"
              href="/lists/id1"
            >
              <h5
                class="mb-1"
              >
                <svg
                  aria-hidden="true"
                  class="text-secondary me-3"
                  fill="currentColor"
                  focusable="false"
                  height="20"
                  role="img"
                  style="display: inline-block; vertical-align: middle;"
                  viewBox="0 0 512 512"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM96 192c0-17.7 14.3-32 32-32s32 14.3 32 32c0 53 43 96 96 96s96-43 96-96c0-17.7 14.3-32 32-32s32 14.3 32 32c0 70.7-57.3 128-128 128s-128-57.3-128-128z"
                  />
                </svg>
                foo
              </h5>
            </a>
          </div>
          <div
            class="col-lg-4"
          >
            <small
              class="text-muted"
            >
              May 27 2020, 12:00:00 am
            </small>
          </div>
          <div
            class=" pe-lg-3 col-lg-2"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
